...
                                            </variation>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tDu-co-Wqw">
                                            <rect key="frame" x="96" y="31" width="60" height="20"/>
                                            <animations/>
...
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tag" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lC9-Yv-V07">
                                            <rect key="frame" x="96" y="54" width="23" height="20"/>
                                            <animations/>
...
                <viewController id="pKB-qC-LGx" customClass="EditProfileViewController" customModule="B2BTutoring" customModuleProvider="target" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="u5U-pt-UME">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="51o-Pd-yKh">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Done" id="mpL-sa-uc4">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="94P-4n-3fB" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="profile" id="YwS-rX-eie"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6CD-4p-wSf">
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Post" id="bqp-jT-2mU">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
...
                            <animations/>
                            <segments>
                                <segment title="Tutee"/>
                                <segment title="Tutor"/>
                                <segment title="Follow"/>
                            </segments>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="More" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="yFH-9a-3kx">
                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                            </connections>
                        </segmentedControl>
                        <barButtonItem key="rightBarButtonItem" image="edit" id="iTa-26-ddh">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s35-DX-X33" customClass="HoshiTextField" customModule="B2BTutoring" customModuleProvider="target">
                                        <rect key="frame" x="20" y="402" width="560" height="60"/>
                                        <animations/>
...
                                        </connections>
                                    </button>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uJG-yJ-S0q" customClass="HoshiTextField" customModule="B2BTutoring" customModuleProvider="target">
                                        <rect key="frame" x="20" y="470" width="560" height="60"/>
                                        <animations/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Music" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MRC-oo-WKR">
                                            <rect key="frame" x="36" y="15" width="37" height="20"/>
                                            <animations/>
...
