...
            ImageRow("BackgroundImage"){
                $0.title = "Background Image"
            }
        
            form +++=
        
            TextAreaRow("Description") {
                $0.placeholder = "Description"
                $0.cell.textView.font = font
                }.onChange { [weak self] row in
                    let tagRow: TextRow! = self?.form.rowByTag("Tags")

                    if row.value != nil {
...
